; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/ftp/ftpd/extr_security.c_sec_get_data.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/ftp/ftpd/extr_security.c_sec_get_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32, i32*, i32, i32)* }
%struct.buffer = type { i32*, i64, i32 }

@mech = common dso_local global %struct.TYPE_2__* null, align 8
@app_data = common dso_local global i32 0, align 4
@data_prot = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.buffer*, i32)* @sec_get_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sec_get_data(i32 %0, %struct.buffer* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.buffer*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store %struct.buffer* %1, %struct.buffer** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @block_read(i32 %11, i32* %8, i32 4)
  store i32 %12, i32* %9, align 4
  %13 = load i32, i32* %9, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %66

16:                                               ; preds = %3
  %17 = load i32, i32* %9, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store i32 -1, i32* %4, align 4
  br label %66

20:                                               ; preds = %16
  br label %21

21:                                               ; preds = %20
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @ntohl(i32 %22)
  store i32 %23, i32* %8, align 4
  %24 = load %struct.buffer*, %struct.buffer** %6, align 8
  %25 = getelementptr inbounds %struct.buffer, %struct.buffer* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = load i32, i32* %8, align 4
  %28 = call i8* @realloc(i32* %26, i32 %27)
  store i8* %28, i8** %10, align 8
  %29 = load i8*, i8** %10, align 8
  %30 = icmp eq i8* %29, null
  br i1 %30, label %31, label %32

31:                                               ; preds = %21
  store i32 -1, i32* %4, align 4
  br label %66

32:                                               ; preds = %21
  %33 = load i8*, i8** %10, align 8
  %34 = bitcast i8* %33 to i32*
  %35 = load %struct.buffer*, %struct.buffer** %6, align 8
  %36 = getelementptr inbounds %struct.buffer, %struct.buffer* %35, i32 0, i32 0
  store i32* %34, i32** %36, align 8
  %37 = load i32, i32* %5, align 4
  %38 = load %struct.buffer*, %struct.buffer** %6, align 8
  %39 = getelementptr inbounds %struct.buffer, %struct.buffer* %38, i32 0, i32 0
  %40 = load i32*, i32** %39, align 8
  %41 = load i32, i32* %8, align 4
  %42 = call i32 @block_read(i32 %37, i32* %40, i32 %41)
  store i32 %42, i32* %9, align 4
  %43 = load i32, i32* %9, align 4
  %44 = icmp eq i32 %43, 0
  br i1 %44, label %45, label %46

45:                                               ; preds = %32
  store i32 0, i32* %4, align 4
  br label %66

46:                                               ; preds = %32
  %47 = load i32, i32* %9, align 4
  %48 = icmp slt i32 %47, 0
  br i1 %48, label %49, label %50

49:                                               ; preds = %46
  store i32 -1, i32* %4, align 4
  br label %66

50:                                               ; preds = %46
  br label %51

51:                                               ; preds = %50
  %52 = load %struct.TYPE_2__*, %struct.TYPE_2__** @mech, align 8
  %53 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %52, i32 0, i32 0
  %54 = load i32 (i32, i32*, i32, i32)*, i32 (i32, i32*, i32, i32)** %53, align 8
  %55 = load i32, i32* @app_data, align 4
  %56 = load %struct.buffer*, %struct.buffer** %6, align 8
  %57 = getelementptr inbounds %struct.buffer, %struct.buffer* %56, i32 0, i32 0
  %58 = load i32*, i32** %57, align 8
  %59 = load i32, i32* %8, align 4
  %60 = load i32, i32* @data_prot, align 4
  %61 = call i32 %54(i32 %55, i32* %58, i32 %59, i32 %60)
  %62 = load %struct.buffer*, %struct.buffer** %6, align 8
  %63 = getelementptr inbounds %struct.buffer, %struct.buffer* %62, i32 0, i32 2
  store i32 %61, i32* %63, align 8
  %64 = load %struct.buffer*, %struct.buffer** %6, align 8
  %65 = getelementptr inbounds %struct.buffer, %struct.buffer* %64, i32 0, i32 1
  store i64 0, i64* %65, align 8
  store i32 0, i32* %4, align 4
  br label %66

66:                                               ; preds = %51, %49, %45, %31, %19, %15
  %67 = load i32, i32* %4, align 4
  ret i32 %67
}

declare dso_local i32 @block_read(i32, i32*, i32) #1

declare dso_local i32 @ntohl(i32) #1

declare dso_local i8* @realloc(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
